--- a/ClassSchedule/Views/Match/Delete.cshtml
+++ b/ClassSchedule/Views/Match/Delete.cshtml
@@ -10,7 +10,7 @@
         <h4>Match #:@Model?.Number League:@Model?.League</h4>
     </li>
     <li class="list-group-item">
-       @Model?.HomeTeam.TeamName VS @Model?.AwayTeam.TeamName
+       Spartans VS Jets
     </li>
     <li class="list-group-item">
         Time: @Model?.MilitaryTime
